# ansible-collection-inventory-sacloud

./: .gitignore  .tagpr  .tagpr.toml  AGENTS.md  CHANGELOG.md  Makefile  README.md  galaxy.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  tagpr.yml
plugins/inventory/: sacloud.py
scripts/: update-version.sh
tests/: conftest.py  mock_server.py  run_tests.py  test_inventory.py  test_inventory_basic_sacloud.yml  test_inventory_constructed_sacloud.yml  test_inventory_empty_sacloud.yml
tests/data/: mock_api_response.json
